Optimize dockerfile and improve security of mellon_proxy

--- a/mellon_proxy.conf
+++ b/mellon_proxy.conf
@@ -483,6 +483,8 @@ MellonPostCount 100
 
  #       RequestHeader set Mellon-Full-Name %{MELLON_DISPLAY_NAME}e
  #       RequestHeader set Mellon-Email %{MELLON_EMAIL}e
+
+        RequestHeader unset Mellon-Name-Id
         RequestHeader set Mellon-Name-Id %{MELLON_NAME_ID}e
 
 #        RequestHeader set Mellon-Session %{MELLON_SESSION}e
