Match ManageIQ configuration for Mellon

--- a/mellon_proxy.conf
+++ b/mellon_proxy.conf
@@ -59,9 +59,6 @@ MellonPostCount 100
         # See http://httpd.apache.org/docs/2.4/mod/mod_authn_core.html and
         # http://httpd.apache.org/docs/2.4/mod/mod_authz_user.html
         # about them.
-        Require valid-user
-        AuthType "Mellon"
-
 
         # MellonEnable is used to enable auth_mellon on a location.
         # It has three possible values: "off", "info" and "auth".
@@ -87,7 +84,7 @@ MellonPostCount 100
         #           with a 403 Forbidden error without redirecting to the IdP.
         #
         # Default: MellonEnable "off"
-        MellonEnable "auth"
+        MellonEnable "info"
 
         # MellonDecoder is an obsolete option which is a no-op but is
         # still accepted for backwards compatibility.
@@ -98,7 +95,7 @@ MellonPostCount 100
         # you will have to choose a different name for the cookie for each
         # site.
         # Default: "cookie"
-        MellonVariable "mellon"
+        MellonVariable "mellon-cookie"
 
         # Whether the cookie set by auth_mellon should have HttpOnly and
         # secure flags set. Once "On" - both flags will be set. Values 
@@ -132,13 +129,13 @@ MellonPostCount 100
         # value from that attribute may be used. Do not rely on it selecting a
         # specific value.
         # Default: MellonUser "NAME_ID"
-        MellonUser "NAME_ID"
+        MellonUser "username"
 
         # MellonIdP selects in which attribute we should dump the remote 
         # IdP providerId. This is passed to other apache modules and to 
         # the web pages the user visits.
         # Default: none
-        # MellonIdP "IDP"
+        MellonIdP "IDP"
 
         # MellonSetEnv configuration directives allows you to map
         # attribute names received from the IdP to names you choose
@@ -256,7 +253,9 @@ MellonPostCount 100
         # the directory. The directory must be a sub-directory of this
         # <Location ...>.
         # Default: MellonEndpointPath "/mellon"
-        # MellonEndpointPath "/secret/endpoint"
+        
+        # This path is used in the IdP config to set the paths for posting responses
+        MellonEndpointPath "/saml2"
 
         # MellonDefaultLoginPath is the location where one should be
         # redirected after an IdP-initiated login. Default is "/"
@@ -490,8 +489,34 @@ MellonPostCount 100
 #        RequestHeader set Mellon-Session %{MELLON_SESSION}e
 #        RequestHeader set Mellon-Saml-Response %{MELLON_SAML_RESPONSE}e
 
+MellonSetEnvNoPrefix          "REMOTE_USER"            username
+MellonSetEnvNoPrefix          "REMOTE_USER_EMAIL"      email
+MellonSetEnvNoPrefix          "REMOTE_USER_FIRSTNAME"  firstname
+MellonSetEnvNoPrefix          "REMOTE_USER_LASTNAME"   lastname
+MellonSetEnvNoPrefix          "REMOTE_USER_FULLNAME"   fullname
+MellonSetEnvNoPrefix          "REMOTE_USER_GROUPS"     groups
+    
+
 </Location>
+
+<Location /remote_login>
+        
+        MellonEnable "auth"
+        Require valid-user
+        AuthType "Mellon"
+
+</Location>
+
 ServerName localhost
 ErrorLog /dev/stderr
 TransferLog /dev/stdout
 LogLevel debug
+
+RequestHeader unset X_REMOTE_USER
+RequestHeader set X_REMOTE_USER           %{REMOTE_USER}e           env=REMOTE_USER
+RequestHeader set X_EXTERNAL_AUTH_ERROR   %{EXTERNAL_AUTH_ERROR}e   env=EXTERNAL_AUTH_ERROR
+RequestHeader set X_REMOTE_USER_EMAIL     %{REMOTE_USER_EMAIL}e     env=REMOTE_USER_EMAIL
+RequestHeader set X_REMOTE_USER_FIRSTNAME %{REMOTE_USER_FIRSTNAME}e env=REMOTE_USER_FIRSTNAME
+RequestHeader set X_REMOTE_USER_LASTNAME  %{REMOTE_USER_LASTNAME}e  env=REMOTE_USER_LASTNAME
+RequestHeader set X_REMOTE_USER_FULLNAME  %{REMOTE_USER_FULLNAME}e  env=REMOTE_USER_FULLNAME
+RequestHeader set X_REMOTE_USER_GROUPS    %{REMOTE_USER_GROUPS}e    env=REMOTE_USER_GROUPS
